--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "eslint": "^8.4.1",
     "eslint-plugin-nuxt": "^3.1.0",
-    "eslint-plugin-vue": "^8.2.0"
+    "eslint-plugin-vue": "^8.2.0",
+    "pug": "^3.0.2",
+    "pug-loader": "^2.4.0",
+    "pug-plain-loader": "^1.1.0"
   }
 }
